# paperwork

./: .cursorignore  .cursorrules  .eslintignore  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .vercel-webhook-nudge  .vercelignore  AGENTS.md  CURSOR_BACKUP_README.md  Dockerfile.backend  Dockerfile.frontend  KNOWLEDGE.md  Makefile  PRD.md  PRODUCT_SPEC.md  README.md  TASKS.md  fly.backend.toml  fly.cron.toml  fly.worker.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  renovate.json  requirements.txt  run.sh  tsconfig.json  turbo.json  vercel-projects.json
apis/axiomfolio/: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  llms.txt  medallion_move_map.yaml  pyproject.toml  render.yaml  requirements.txt
apis/axiomfolio/.cursor/rules/: brain-mcp-sync.mdc  code-quality-guardian.mdc  market-data-platform.mdc  prod-database.mdc  systematic-trader.mdc  token-efficiency.mdc  ux-lead.mdc  validator-curator.mdc
apis/axiomfolio/.github/: WORKFLOWS_MOVED.md  validate-workflows.py
apis/axiomfolio/.github/workflows/: dependabot-automerge.yml  pre-merge-deploy-gate.yml
apis/axiomfolio/app/: README.md  config.py  database.py
apis/axiomfolio/app/alembic/: env.py
apis/axiomfolio/app/api/: README.md  __init__.py  dependencies.py  main.py  rate_limit.py  security.py
apis/axiomfolio/app/constants/: public_stats.py
apis/axiomfolio/app/mcp/: __init__.py  auth.py  server.py
apis/axiomfolio/app/models/: __init__.py  account_balance.py  account_risk_profile.py  agent_action.py  agent_message.py  alert.py  audit.py  auto_ops_explanation.py  backtest.py  broker_account.py  broker_oauth_connection.py  conviction_pick.py  corporate_action.py  deploy_health_event.py  entitlement.py  execution.py  external_signal.py  historical_import_run.py  historical_iv.py  index_constituent.py  institutional_holding.py  instrument.py  margin_interest.py  market_data.py  market_tracked_plan.py  mcp_token.py  multitenant.py  narrative.py  notification.py  option_tax_lot.py  options.py  order.py  picks.py  plaid_connection.py  portfolio.py  position.py  provider_quorum.py  shadow_order.py  signals.py  strategy.py  (+10 more)
apis/axiomfolio/app/observability/: __init__.py  metrics.py  span_decorators.py  tracing.py
apis/axiomfolio/app/scripts/: rss_top.py  run_task.py  seed_schedules.py  spotcheck_indicators.py  sync_render_crons.py
apis/axiomfolio/app/services/: __init__.py  cache.py
apis/axiomfolio/app/tasks/: README.md  candidates.py  celery_app.py  job_catalog.py
apis/axiomfolio/app/tests/: README.md  auth_test_utils.py  conftest.py  test_account_config_service.py  test_account_credentials_service.py  test_account_management_endpoints.py  test_account_risk_profile.py  test_account_strategy.py  test_account_type_resolver.py  test_accounts_auth_scope.py  test_admin_agent_chat.py  test_admin_health_portfolio_sync_tz.py  test_admin_health_service.py  test_admin_jobs_backfill_option_tax_lots.py  test_admin_role_normalization.py  test_admin_schedules.py  test_agent_read_file.py  test_aggregator_ibkr_flex.py  test_aggregator_routes.py  test_aggregator_tt_async.py  test_alerts_service.py  test_anomaly_builder.py  test_anomaly_explainer.py  test_api_endpoints.py  test_api_smoke.py  test_atr_validation.py  test_auth_endpoints.py  test_auto_ops_explain_rate_limit_db.py  test_auto_ops_rate_limit_window_unit.py  test_backfill_symbols_uses_newest_bars.py  test_backfill_warmup_and_guard.py  test_bootstrap_daily_coverage_tracked_history_window.py  test_brain_tools_user_id_audit.py  test_broker_sync_routing_schwab.py  test_broker_sync_service.py  test_candidate_generator.py  test_celery_routing.py  test_chart_share_unit.py  test_ci_hard_fail_on_missing_db.py  test_circuit_breaker_simulation.py  (+119 more)
apis/axiomfolio/app/utils/: __init__.py  db_safety.py  request_context.py
apis/axiomfolio/backend/: README.md  __init__.py
apis/axiomfolio/backend/mcp/: auth.py  server.py
apis/axiomfolio/backend/models/: README.md  account_risk_profile.py  auto_ops_explanation.py  backtest.py  broker_oauth_connection.py  historical_iv.py  institutional_holding.py  multitenant.py  options.py  plaid_connection.py  portfolio.py  position.py  signals.py  tax_lot.py  trade_decision_explanation.py  user.py  walk_forward_study.py  watchlist.py
apis/axiomfolio/backend/observability/: __init__.py
apis/axiomfolio/backend/scripts/: __init__.py  rss_top.py  spotcheck_indicators.py  sync_render_crons.py
apis/axiomfolio/backend/services/: cache.py
apis/axiomfolio/backend/tasks/: README.md  candidates.py  job_catalog.py
apis/axiomfolio/backend/tests/: auth_test_utils.py  conftest.py  test_account_management_endpoints.py  test_account_type_resolver.py  test_admin_health_portfolio_sync_tz.py  test_admin_role_normalization.py  test_agent_read_file.py  test_aggregator_ibkr_flex.py  test_anomaly_builder.py  test_anomaly_explainer.py  (+57 more)
apis/axiomfolio/docs/: ARCHITECTURE.md  MODELS.md  ONBOARDING.md  PAPERWORK_HANDOFF.md  STAGE_ANALYSIS_SPEC.md  STRATEGIES.md  TRADING.md  privacy.md
apis/axiomfolio/frontend/: nginx.conf  vite.config.ts
apis/axiomfolio/infra/: compose.dev.yaml  compose.test.yaml  env.prod.example
apis/axiomfolio/other_assets/: IBKR flexquery.text
apis/axiomfolio/scripts/: bump_requirements.py  check_syntax.py  etf_history_fill.py  medallion_migrate.py  restore_db.sh  test_migrations.py
apis/filefree/: .dockerignore  Dockerfile  WAIVERS.md  pyproject.toml  requirements.txt
apis/filefree/alembic/: env.py
apis/filefree/app/: config.py  dependencies.py  main.py  rate_limit.py  redis.py
apis/filefree/tax-data/: 2025.json
apis/filefree/tests/: conftest.py  test_auth.py  test_encryption.py  test_filing_transitions.py  test_health.py  test_oauth.py  test_tax_calculator.py
apis/launchfree/: Dockerfile  pyproject.toml  requirements.txt
apis/launchfree/app/: __init__.py  config.py  database.py  dependencies.py  main.py
tools/pwl/: README.md  pyproject.toml
tools/pwl/tests/: test_cli.py  test_doctor.py  test_new_app.py  test_onboard.py  test_registry.py
(+4658 files in other folders)
