[project]
# Virtual root for the Paperwork Labs Python workspace. Not a real
# distribution -- never published. Only exists so uv has a place to
# anchor `[tool.uv.workspace]`.
name = "paperwork"
version = "0.0.0"
description = "Paperwork Labs monorepo (Python workspace root)"
requires-python = ">=3.11"

[tool.uv]
# Workspace members declare their own deps in their own pyproject.toml;
# the root never installs anything itself.
package = false

[tool.uv.workspace]
# Every Python package and backend in the monorepo is a workspace
# member. Members are discovered by the glob below; each must have a
# `[project]` table in its pyproject.toml. Adding a new package under
# packages/python/<name>/ or a new backend under apis/<name>/ requires
# no further wiring here.
members = ["apis/*", "packages/python/*"]

# ----------------------------------------------------------------------
# Repo-wide tooling config (preserved from the pre-uv-workspace root).
# These configs apply to monorepo-level scripts/ and tests/ that don't
# live inside any workspace member.
# ----------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["api"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "DTZ",  # datetime timezone (UTC discipline)
]
ignore = [
    "S101",  # assert used in tests
    "S105",  # hardcoded password (false positives on env vars)
    "S106",  # hardcoded password
    "B008",  # Depends() in function defaults — idiomatic FastAPI
    "S607",  # partial executable path — intentional for alembic CLI
    "N818",  # AppException naming — base class, not user-facing
    "UP042", # str+Enum → StrEnum — defer to avoid SQLAlchemy enum migration risk
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# CI-facing CLIs/tests: intentional stdout/stderr output; trusted subprocess to git.
"scripts/check_alembic_heads.py" = ["T201"]
"scripts/check_dockerfile_healthcheck.py" = ["T201", "S603"]
"scripts/check_parents_import_safety.py" = ["T201"]
"scripts/tests/test_parents_import_safety_examples.py" = ["S603"]
"scripts/cloudflare_decommission_zones.py" = ["T201"]
"scripts/cloudflare_issue_readonly_tokens.py" = ["T201"]
"scripts/reconcile_clerk_dns.py" = ["T201", "S603"]
"scripts/check_pre_deploy.py" = ["T201", "S603"]
"scripts/brain_pause.py" = ["T201"]
"scripts/blitz_orchestrator.py" = ["T201"]
"scripts/log_agent_dispatch.py" = ["T201"]
"tests/scripts/**" = ["T201", "ARG002", "E501", "S603"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["redis.*", "slowapi.*", "passlib.*", "jose.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["api/tests"]
asyncio_mode = "auto"
