[project]
# AxiomFolio API. Runtime deps live in `requirements.txt` (Docker still
# uses pip). This `[project]` table exists so the monorepo's uv workspace
# (`/pyproject.toml`) can discover this backend as a member and so we can
# declare workspace deps below via `[tool.uv.sources]`.
name = "axiomfolio"
version = "0.0.0"
description = "AxiomFolio API"
requires-python = ">=3.11"
dependencies = [
  "mcp-server",
  "api-foundation",
  "observability",
  "rate-limit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# AxiomFolio is never built as a wheel, but hatchling needs a target.
# `app/` is the FastAPI source tree.
packages = ["app"]

[tool.uv.sources]
mcp-server = { workspace = true }
api-foundation = { workspace = true }
observability = { workspace = true }
rate-limit = { workspace = true }

[tool.black]
# Simple, clean code formatting
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | migrations
  | alembic/versions
)/
'''

[tool.isort]
# Clean, consistent imports
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = ["migrations/*", "alembic/versions/*"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# Full `DTZ` (not only `DTZ003`). See docs/infra/TIMEZONE_STANDARDS.md.
# Use: ruff check app/ --exclude alembic
select = ["DTZ"]
