[project]
name = "launchfree"
version = "0.0.0"
description = "Launchfree API (Paperwork)"
requires-python = ">=3.11"
dependencies = [
  "api-foundation",
  "observability",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.uv.sources]
api-foundation = { workspace = true }
observability = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "DTZ"]
