[project]
name = "pwl"
version = "0.1.0"
description = "Paperwork Labs CLI — scaffold new apps, audit monorepo health"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "pyyaml>=6",
]

[project.scripts]
pwl = "pwl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.13",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF", "T20", "DTZ"]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
